fix: update z-index to 100 in flash.css

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -574,7 +574,6 @@ blockquote .small {
 .alert {
   border-radius: 0px;
   overflow-wrap: break-word;
-  z-index: 100;
 }
 
 /* gatsby 404 */
